--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
     env_file:
       - .env
     restart: unless-stopped
+    environment:
+      PHP_IDE_CONFIG: "serverName=localhost"
+      XDEBUG_SESSION: "1"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     volumes:
