--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -57,6 +57,7 @@ services:
   
     Shared\Infrastructure\Bus\Projection\Projector\Redis\ProjectorConsumer:
       arguments: [ !tagged shared.domain.bus.projector.projection ]
+      public: true
 
     Shared\Domain\Bus\Projection\Projector: '@Shared\Infrastructure\Bus\Projection\Projector\Redis\ProjectorProducer'
 
