--- a/app/composer.json
+++ b/app/composer.json
@@ -39,14 +39,14 @@
         "psr-4": {
             "App\\": "app/",
             "Auth\\": "src/Auth/src/",
-            "ArrangementFee\\": "src/ArrangementFee/src/",
+            "OrganizationalFees\\": "src/OrganizationalFees/src/",
             "Shared\\": "src/Shared/src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
             "Tests\\Auth\\": "src/Auth/tests/",
-            "Tests\\ArrangementFee\\": "src/ArrangementFee/tests/",
+            "Tests\\OrganizationalFees\\": "src/OrganizationalFees/tests/",
             "Tests\\Shared\\": "src/Shared/tests/"
         }
     },
