реализовал запись использования promoCode в order

--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -35,6 +35,9 @@ services:
   Shared\:
     resource: '../src/Shared/src/'
 
+  Tests\OrganizationalFees\Domain\ArrangementFee\Model\ArrangementFeeTest:
+    public: true
+
   Shared\Infrastructure\Tests\Doctrine\DatabaseArranger:
     public: true
 
