--- a/app/composer.json
+++ b/app/composer.json
@@ -13,6 +13,7 @@
         "lexik/jwt-authentication-bundle": "^2.16",
         "ramsey/uuid": "^4.7",
         "symfony-bundles/redis-bundle": "^3.1",
+        "symfony/cache": "6.1.*",
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
