--- a/.env.dist
+++ b/.env.dist
@@ -7,6 +7,7 @@ APP_ENV=dev
 APP_DEBUG=1
 APP_SECRET=47279e59c355aead1c5113ac314edee0
 APP_BASE_DIR=./app
+APP_RESOLV_DIR=docker/php/resolv.conf
 
 # db connection
 APP_DATABASE_NAME=cqrs
