--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - "host.docker.internal:host-gateway"
     volumes:
       - ${APP_BASE_DIR-.}:/app
+      - ./docker/php/resolv.conf:/etc/resolv.conf
 
   web:
     build:
