--- a/app/config/services_test.yaml
+++ b/app/config/services_test.yaml
@@ -27,3 +27,6 @@ services:
 
   OrganizationalFees\Application\Command\AddArrangementFee\AddArrangementFeeCommandHandler:
     public: true
+
+  OrganizationalFees\Application\Command\Festival\FestivalCreate\FestivalCreateCommandHandler:
+    public: true
