--- a/app/config/services/organizationalFees.yaml
+++ b/app/config/services/organizationalFees.yaml
@@ -3,6 +3,9 @@ services:
   _defaults:
     autowire: true      # Automatically injects dependencies in your services.
     autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+  _instanceof:
+    \Shared\Domain\Bus\Projection\Projection:
+      tags: [ 'shared.domain.bus.projector.projection' ]
 
   OrganizationalFees\:
     resource: '../../src/OrganizationalFees/src/'
@@ -32,5 +35,6 @@ services:
     tags: [ 'shared.domain.bus.projector.projection' ]
   OrganizationalFees\Infrastructure\Projection\Order\OrderWasCreatingProjection:
     tags: [ 'shared.domain.bus.projector.projection' ]
-
+  OrganizationalFees\Infrastructure\Projection\ArrangementFee\ArrangementFeeUpdatePriceProjection:
+    tags: [ 'shared.domain.bus.projector.projection' ]
 
