--- a/app/config/packages/doctrine.yaml
+++ b/app/config/packages/doctrine.yaml
@@ -8,6 +8,7 @@ doctrine:
       driver: '%env(resolve:APP_DATABASE_DRIVER)%'
 
     orm:
+        enable_lazy_ghost_objects: true
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
@@ -21,8 +22,7 @@ doctrine:
 when@test:
     doctrine:
         dbal:
-            # "TEST_TOKEN" is typically set by ParaTest
-            dbname_suffix: '_test%env(default::TEST_TOKEN)%'
+
 
 when@prod:
     doctrine:
