реализовал approved order

--- a/app/config/testServices/organizationalFeesTest.yaml
+++ b/app/config/testServices/organizationalFeesTest.yaml
@@ -39,3 +39,6 @@ services:
 
   Tests\OrganizationalFees\Application\Command\AddArrangementFee\AddArrangementFeeCommandHandlerTest:
     public: true
+
+  OrganizationalFees\Application\Command\OrderApproved\OrderApprovedCommandHandler:
+    public: true
