--- a/app/config/testServices/organizationalFeesTest.yaml
+++ b/app/config/testServices/organizationalFeesTest.yaml
@@ -45,3 +45,6 @@ services:
 
   OrganizationalFees\Application\Query\FindPromoCode\FindPromoCodeQueryHandler:
     public: true
+
+  OrganizationalFees\Application\Query\GetArrangementFeeList\GetArrangementFeeListQueryHandler:
+    public: true
