Добавил GetArrangementFeeAllPriceListQueryHandler для вывода всех цен

--- a/app/config/testServices/organizationalFeesTest.yaml
+++ b/app/config/testServices/organizationalFeesTest.yaml
@@ -48,3 +48,6 @@ services:
 
   OrganizationalFees\Application\Query\GetArrangementFeeList\GetArrangementFeeListQueryHandler:
     public: true
+
+  OrganizationalFees\Application\Query\GetArrangementFeeAllPriceList\GetArrangementFeeAllPriceListQueryHandler:
+    public: true
