--- a/app/config/testServices/organizationalFeesTest.yaml
+++ b/app/config/testServices/organizationalFeesTest.yaml
@@ -51,3 +51,6 @@ services:
 
   OrganizationalFees\Application\Query\GetArrangementFeeAllPriceList\GetArrangementFeeAllPriceListQueryHandler:
     public: true
+
+  OrganizationalFees\Application\Query\GetFestivalList\GetFestivalListQueryHandler:
+    public: true
