--- a/.env.dist
+++ b/.env.dist
@@ -1,13 +1,14 @@
 INFRA_PGADMIN_PORT=5052
 INFRA_PGDB_PORT=5434
+INFRA_AMQP_PORT=15672
 INFRA_WEB_PORT=8082
+
 
 APP_NAME=cqrs
 APP_ENV=dev
 APP_DEBUG=1
 APP_SECRET=47279e59c355aead1c5113ac314edee0
 APP_BASE_DIR=./app
-APP_RESOLV_DIR=docker/php/resolv.conf
 
 # db connection
 APP_DATABASE_NAME=cqrs
