--- a/app/composer.json
+++ b/app/composer.json
@@ -10,18 +10,22 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
         "jms/serializer-bundle": "^5.0",
-        "lexik/jwt-authentication-bundle": "^2.21",
+        "lexik/jwt-authentication-bundle": "2.*",
         "ramsey/uuid": "^4.7",
         "symfony-bundles/redis-bundle": "^3.1",
+        "symfony/amqp-messenger": "6.1.*",
         "symfony/cache": "6.1.*",
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.1.*",
+        "symfony/messenger": "6.1.*",
         "symfony/monolog-bundle": "^3.10",
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "6.1.*",
         "symfony/security-bundle": "6.1.*",
+        "symfony/serializer": "6.1.*",
+        "symfony/validator": "6.1.*",
         "symfony/yaml": "6.1.*"
     },
     "config": {
@@ -72,7 +76,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.2.*"
+            "require": "6.1.*"
         }
     },
     "require-dev": {
