--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -38,7 +38,11 @@ services:
   #    Shared\Infrastructure\Bus\Projection\Projector\InMemory\ProjectorInMemory:
   #      arguments: [ !tagged shared.domain.bus.projector.projection ]
   
-  Shared\Infrastructure\Bus\Projection\Projector\Redis\ProjectorConsumer:
+  #   Shared\Infrastructure\Bus\Projection\Projector\Redis\ProjectorConsumer:
+  #     arguments: [ !tagged shared.domain.bus.projector.projection ]
+  #     public: true
+
+  Shared\Infrastructure\Symfony\Message\WorkerProjectionHandler:
     arguments: [ !tagged shared.domain.bus.projector.projection ]
     public: true
 
