--- a/app/composer.json
+++ b/app/composer.json
@@ -87,6 +87,7 @@
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
         "symfony/phpunit-bridge": "^6.2",
-        "vimeo/psalm": "^5.1"
+        "vimeo/psalm": "^5.1",
+        "zenstruck/messenger-test": "^1.11"
     }
 }
